Fixes UI bugs and Updates outbound links
+ Adds link to SeqViz survey to the sidebar footer
+ Updates link to Medium story featuring SeqViz
+ Removes horizontal scroll in linear sequence viewer
+ Applies uppercase style to BioBrick dropdown label in header for consistency
+ Includes right side padding to Meta header button

--- a/demo/semantic-ui/src/Header.css
+++ b/demo/semantic-ui/src/Header.css
@@ -61,6 +61,7 @@ input#part-input {
   border-radius: 0.25rem !important;
   margin: auto !important;
   padding: 10px 12px !important;
+  text-transform: uppercase;
 }
 
 .circular-button#sidebar-toggle-open {
@@ -118,6 +119,7 @@ input#part-input {
 
 .meta-toggle {
   padding-left: 16px !important;
+  padding-right: 16px !important;
   margin: auto 0 !important;
   vertical-align: middle;
   flex: 1;
